# Makefile

0-0Makefile简介/: text
1-0Makefile书写规则/: text
1-1c语言编译简述/: text
1-2Makefile文件的主要内容/: text
2-0目标/: text
2-1变量/: text
2-2条件执行/: text
2-3函数/: 其它  文件名处理函数  文本处理函数
2-4库/: 动态库  静态库
2-5执行过程/: text
2-7隐含规则/: text
3-0构建一个简单的项目工程/: 1构建框架  2Makefile书写总结
4-0Autotools简介/: text
4-1Autotools使用流程/: 一般流程
4-2flat目录安装包制作/: text
4-3shallow目录安装包制作/: text
4-4Automake变量表/: text
4-5configure.ac里的宏/: text
4-6libtool生成动态链接库/: text  在工程中
4-7使用第三方的库/: text
4-8deep目录安装包制作/: text
5-0打包与发布/: text
deep_hello/: Makefile  Makefile.in  config.h  config.status  configure  configure.ac
deep_hello/autom4te.cache/: output.1  output.3  output.4  requests  traces.1  traces.3  traces.4
deep_hello/src/: Makefile  Makefile.am  Makefile.in
deep_hello/src/.deps/: hello-main.Po
deep_hello/src/bluetooth/: Makefile  Makefile.am
deep_hello/src/head/: Makefile  Makefile.am  Makefile.in  hello.h
deep_hello/src/lcd/: Makefile  Makefile.in  lcd.c
deep_hello/src/led/: Makefile  led.c  (+1 more)
flat_hello/: Makefile  Makefile.am  Makefile.in  config.h  config.status  configure  configure.ac  lcd.h  sound.h
flat_hello/.deps/: bluetooth.Po  lcd.Po  led.Po  main.Po  net.Po  sound.Po  usb.Po
flat_hello/autom4te.cache/: output.0  output.3  requests  traces.0  traces.1  traces.2  traces.3
hello/: Makefile  common.mk
hello/bluetooth/: Makefile
hello/head/: led.h  sound.h  usb.h
hello/led/: Makefile
hello/main/: Makefile  main.c
hello/net/: Makefile
hello/sound/: Makefile
hello/usb/: Makefile  usb.c
hello_4-7/: Makefile  Makefile.am  Makefile.in  config.h.in  config.status  configure  configure.ac  libtool
hello_4-7/autom4te.cache/: output.0  output.3  output.4  requests  traces.3  traces.4
hello_4-7/libs/: Makefile  Makefile.in
hello_4-7/libs_head/: Makefile  Makefile.am  Makefile.in  jpg.h
hello_4-7/src/: Makefile  Makefile.am  Makefile.in  main.c
hello_4-7/src/.deps/: hello-main.Po  main.Po
hello_4-7/src/bluetooth/: Makefile  Makefile.in
hello_4-7/src/head/: Makefile  Makefile.am  Makefile.in  heads.h
hello_4-7/src/lcd/: Makefile  Makefile.am
hello_4-7/src/led/: Makefile  Makefile.in
hello_4-7/src/led/.deps/: led.Po
hello_4-7/src/net/: Makefile  Makefile.in
hello_4-7/src/sound/: Makefile
hello_4-7/src/usb/: Makefile  Makefile.am
libs/jpg/: jpg.c
libs/video/: Makefile  Makefile.am  Makefile.in  config.h  config.status  configure  configure.ac  libtool  video.c  video.h
libs/video/.deps/: video.Plo
libs/video/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
libtool_hello/: Makefile  Makefile.in  config.status  configure  configure.ac  libtool
libtool_hello/autom4te.cache/: output.3  output.4  requests  traces.3  traces.4
libtool_hello/src/: Makefile  Makefile.am  Makefile.in  config.h
libtool_hello/src/bluetooth/: Makefile  Makefile.in  bluetooth.c
libtool_hello/src/head/: Makefile  Makefile.in  bluetooth.h  sound.h
libtool_hello/src/lcd/: Makefile  Makefile.in
libtool_hello/src/led/: Makefile  Makefile.in
libtool_hello/src/net/: Makefile  Makefile.am  Makefile.in
libtool_hello/src/net/.deps/: libnet_la-net.Plo
libtool_hello/src/sound/: Makefile  Makefile.in
libtool_hello/src/sound/.deps/: sound.Po
libtool_hello/src/usb/: Makefile  Makefile.in
shallow_hello/: Makefile  Makefile.in  config.status  configure  configure.ac
shallow_hello/autom4te.cache/: output.2  requests  traces.0  traces.2  traces.3
shallow_hello/src/: Makefile  Makefile.am  Makefile.in
shallow_hello/src/bluetooth/: Makefile  Makefile.in
shallow_hello/src/head/: Makefile  Makefile.in  hello.h  net.h
shallow_hello/src/lcd/: Makefile  Makefile.in
shallow_hello/src/led/: Makefile  Makefile.in
shallow_hello/src/net/: Makefile  Makefile.am  Makefile.in
shallow_hello/src/net/.deps/: net.Po
shallow_hello/src/sound/: Makefile  Makefile.am  Makefile.in
shallow_hello/src/usb/: Makefile  Makefile.in
(+14 files in other folders)
