#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT(hello,v1.0,xxx@qq.com)
AC_CONFIG_SRCDIR([src/main.c])
AC_CONFIG_HEADERS([src/config.h])
AM_INIT_AUTOMAKE
# Checks for programs.
AC_PROG_CC

# Checks for libraries.
AC_PROG_RANLIB
# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_OUTPUT(Makefile
	  src/Makefile
	  src/head/Makefile
	  src/led/Makefile
	  src/lcd/Makefile
	  src/usb/Makefile
	  src/sound/Makefile
	  src/net/Makefile
	  src/bluetooth/Makefile)
